# gesture_controller

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
include/: controller.h  detection.h  device.h  drone.h  face_detection.h  gesture_detection.h  tello.h
src/: controller.cpp  detection.cpp  device.cpp  drone.cpp  face_detection.cpp  gesture_detection.cpp  main.cpp  tello.cpp
test/: test_controller.cpp  test_face_detection.cpp  test_gesture_detection.cpp
